--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Perpustakaan SUKA BACA</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+
+<div class="container mt-4">
+    <div class="row">
+        <!-- Kolom I -->
+        <div class="col-md-4">
+            <h2>Selamat Datang di Website Perpustakaan SUKA BACA</h2>
+        </div>
+
+        <!-- Kolom II -->
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Judul Buku</th>
+                        <th>Pengarang</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Belajar HTML</td>
+                        <td>John Doe</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Mastering CSS</td>
+                        <td>Jane Doe</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>JavaScript untuk Pemula</td>
+                        <td>Mark Smith</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Kolom III -->
+        <div class="col-md-4">
+            <form>
+                <div class="form-group">
+                    <label for="name">Nama:</label>
+                    <input type="text" class="form-control" id="name" placeholder="Masukkan nama">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Masukkan email">
+                </div>
+                <button type="submit" class="btn btn-primary">Kirim</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
 
