--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
-        </div>
-    </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+            <hr>
+
+            <form>
+                <div class="form-group">
+                    <label for="message">Pesan:</label>
+                    <textarea class="form-control" id="message" rows="3" placeholder="Masukkan pesan"></textarea>
+                </div>
+                <button type="submit" class="btn btn-secondary">Kirim Pesan</button>
+            </form>
+
+            <div class="mt-3">
+                <b
 
