--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
+<div class=”dropdown”>
+ <button class=”mainmenubtn”>Main menu</button>
+ <div class=”dropdown-child”>
+   <a href=”http://wwww.yourdonain.com/page1.html”>Child menu 1</a>
+   <a href=”http://wwww.yourdonain.com/page2.html”>Child menu 2</a>
+   <a href=”http://wwww.yourdonain.com/page3.html”>Child menu 3</a>
+   <a href=”http://wwww.yourdonain.com/page4.html”>Child menu 4</a>
+   <a href=”http://wwww.yourdonain.com/page5.html”>Child menu 5</a>
+ </div>
 <div class="container mt-4">
     <div class="row">
         <!-- Kolom I -->
