--- a/index.html
+++ b/index.html
@@ -5,49 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Perpustakaan SUKA BACA</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-
-        .mainmenubtn {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .dropdown-child {
-            display: none;
-            position: absolute;
-            background-color: white;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-
-        .dropdown:hover .dropdown-child {
-            display: block;
-        }
-
-        .dropdown-child a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        .dropdown-child a:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
+    <link rel="stylesheet" href="style"> <!-- Link to your CSS file -->
 </head>
 <body>
 
-<div class="container mt-4">
+<header class="container mt-4">
     <!-- Dropdown Menu -->
     <div class="dropdown mb-4">
-        <button class="mainmenubtn">Main menu</button>
+        <button class="mainmenubtn" aria-haspopup="true" aria-expanded="false">Main menu</button>
         <div class="dropdown-child">
             <a href="http://www.yourdomain.com/page1.html">Child menu 1</a>
             <a href="http://www.yourdomain.com/page2.html">Child menu 2</a>
@@ -56,7 +21,9 @@
             <a href="http://www.yourdomain.com/page5.html">Child menu 5</a>
         </div>
     </div>
+</header>
 
+<main class="container">
     <div class="row">
         <!-- Kolom I -->
         <div class="col-md-4">
@@ -95,20 +62,20 @@
 
         <!-- Kolom III -->
         <div class="col-md-4">
-            <form>
+            <form method="post" action="your_action_page.php">
                 <div class="form-group">
                     <label for="name">Nama:</label>
-                    <input type="text" class="form-control" id="name" placeholder="Masukkan nama">
+                    <input type="text" class="form-control" id="name" placeholder="Masukkan nama" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Masukkan email">
+                    <input type="email" class="form-control" id="email" placeholder="Masukkan email" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
         </div>
     </div>
-</div>
+</main>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
