--- a/index.html
+++ b/index.html
@@ -1,85 +1,25 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
+
 <head>
-    ssssssaaaa
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Perpustakaan SUKA BACA</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.ccs"> <!-- Link to your CSS file -->
+    <title>Menu</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
-
-<header class="container mt-4">
-    <!-- Dropdown Menu -->
-    <div class="dropdown mb-4">
-        <button class="mainmenubtn" aria-haspopup="true" aria-expanded="false">Main menu</button>
-        <div class="dropdown-child">
-            <a href="http://www.yourdomain.com/page1.html">Child menu 1</a>
-            <a href="http://www.yourdomain.com/page2.html">Child menu 2</a>
-            <a href="http://www.yourdomain.com/page3.html">Child menu 3</a>
-            <a href="http://www.yourdomain.com/page4.html">Child menu 4</a>
-            <a href="http://www.yourdomain.com/page5.html">Child menu 5</a>
-        </div>
+    <div id="halaman">
+        <nav>
+            <ul>
+                <li><a href="#">Menu 1</a></li>
+                <li><a href="#">Menu 2</a></li>
+                <li><a href="#">Menu 3</a></li>
+            </ul>
+        </nav>
     </div>
-</header>
-
-<main class="container">
-    <div class="row">
-        <!-- Kolom I -->
-        <div class="col-md-4">
-            <h2>Selamat Datang di Website Perpustakaan SUKA BACA</h2>
-        </div>
-
-        <!-- Kolom II -->
-        <div class="col-md-4">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Judul Buku</th>
-                        <th>Pengarang</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Belajar HTML</td>
-                        <td>John Doe</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Mastering CSS</td>
-                        <td>Jane Doe</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>JavaScript untuk Pemula</td>
-                        <td>Mark Smith</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <!-- Kolom III -->
-        <div class="col-md-4">
-            <form method="post" action="your_action_page.php">
-                <div class="form-group">
-                    <label for="name">Nama:</label>
-                    <input type="text" class="form-control" id="name" placeholder="Masukkan nama" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Masukkan email" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Kirim</button>
-            </form>
-        </div>
-    </div>
-</main>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
+
