--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <body>
     <div id="halaman">
-        <nav>
-            <ul>
-                <li><a href="#">Menu 1</a></li>
-                <li><a href="#">Menu 2</a></li>
-                <li><a href="#">Menu 3</a></li>
+        <nav style="background-color: #333; padding: 10px;">
+            <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 1</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 2</a></li>
+            <li style="display: inline;"><a href="#" style="color: #FFF;">Menu 3</a></li>
             </ul>
         </nav>
+
     </div>
 </body>
 
