--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <ul style="list-style: none; padding: 0; margin: 0;">
             <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 1</a></li>
             <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 2</a></li>
+                <ul>
+                    <li><href="">menu 2.1</a></li>
+                    <li><href="">menu 2.1</a></li>
+                    <li><href="">menu 2.1</a></li>
             <li style="display: inline;"><a href="#" style="color: #FFF;">Menu 3</a></li>
             </ul>
         </nav>
