--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <link rel="stylesheet" href="style.ccs"/>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div id="halaman">
-        <nav style="background-color: #333; padding: 10px;">
-            <ul style="list-style: none; padding: 0; margin: 0;">
-            <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 1</a></li>
-            <li style="display: inline; margin-right: 10px;"><a href="#" style="color: #FFF;">Menu 2</a></li>
-                <ul>
-                    <li><href="">menu 2.1</a></li>
-                    <li><href="">menu 2.1</a></li>
-                    <li><href="">menu 2.1</a></li>
-            <li style="display: inline;"><a href="#" style="color: #FFF;">Menu 3</a></li>
-            </ul>
-        </nav>
-
-    </div>
+    <button class="mainmenubtn">Main Menu</button>
 </body>
-
 </html>
-
