--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.ccs">
 </head>
 <body>
+     <div class="dropdown">
     <button class="mainmenubtn">Main Menu</button>
+  <div class="dropdown-child">
+    <a href="http://www.yourdomain.com/page1.html">Sub Menu 1</a>
+    <a href="http://www.yourdomain.com/page2.html">Sub Menu 2</a>
+    <a href="http://www.yourdomain.com/page3.html">Sub Menu 3</a>
+    <a href="http://www.yourdomain.com/page4.html">Sub Menu 4</a>
+    <a href="http://www.yourdomain.com/page5.html">Sub Menu 5</a>
+  </div>
+</div>
+
 </body>
 </html>
