--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.ccs">
+    <title>Dropdown Menu</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Menghubungkan ke file CSS -->
 </head>
 <body>
-     <div class="dropdown">
-    <button class="mainmenubtn">Main Menu</button>
-  <div class="dropdown-child">
-    <a href="http://www.yourdomain.com/page1.html">Sub Menu 1</a>
-    <a href="http://www.yourdomain.com/page2.html">Sub Menu 2</a>
-    <a href="http://www.yourdomain.com/page3.html">Sub Menu 3</a>
-    <a href="http://www.yourdomain.com/page4.html">Sub Menu 4</a>
-    <a href="http://www.yourdomain.com/page5.html">Sub Menu 5</a>
-  </div>
-</div>
-
+    <div class="dropdown">
+        <button class="mainmenubtn">Main Menu</button>
+        <div class="dropdown-child">
+            <a href="http://www.yourdomain.com/page1.html">Sub Menu 1</a>
+            <a href="http://www.yourdomain.com/page2.html">Sub Menu 2</a>
+            <a href="http://www.yourdomain.com/page3.html">Sub Menu 3</a>
+            <a href="http://www.yourdomain.com/page4.html">Sub Menu 4</a>
+            <a href="http://www.yourdomain.com/page5.html">Sub Menu 5</a>
+        </div>
+    </div>
 </body>
 </html>
+
