--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Menu</title>
-    <link rel="stylesheet" href="style.ccs"> 
+    <title>Main Menu</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="dropdown">
@@ -19,4 +19,3 @@
     </div>
 </body>
 </html>
-
