--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  
     <title>Membuat Multi dropdown Menu dengan HTML dan CSS</title>
  
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.ccs" />
  
 </head>
  
