--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+style.ccs
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Membuat Multi Dropdown Menu dengan HTML dan CSS</title>
-    <link rel="stylesheet" href="style.css"> <!-- Memperbaiki nama file dari style.ccs ke style.css -->
+    <link rel="stylesheet" href="style.ccs"> <!-- Pastikan nama file CSS benar -->
 </head>
 <body>
 
@@ -39,4 +40,3 @@
 
 </body>
 </html>
-
