--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ style.ccs
             <li class="dropdown">
                 <a href="#">Kategori</a>
                 <ul>
-                    <li><a href="#">CSS</a></li>
+                    <li><a href="buku di perpustakaan.html">koleksi buku</a></li>
                     <li><a href="#">PHP</a></li>
                     <li><a href="#">Jquery</a></li>
                     <li>
