--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@ style.ccs
                 <a href="#">Profil</a>
                 <ul>
                     <li><a href="#">Profil 1</a></li>
-                    <li><a href="#">Profil 2</a></li>
-                </ul>
+                    <li>
+                        <a href="#">Profil 2</a>
+                        <ul>
+                        <li><a href="#">Dasar HTML</a></li>
+                        <li><a href="#">Tag HTML</a></li>
+                        <li><a href="#">Tag HTML</a></li>
+                    </ul>
+              </li>
+        </ul>
             </li>
             <li class="dropdown">
                 <a href="#">Kategori</a>
