--- a/Perpanjangan Peminjaman Buku.html/perpanjangan.html
+++ b/Perpanjangan Peminjaman Buku.html/perpanjangan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulir Perpanjangan Peminjaman Buku</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Perpanjangan Peminjaman Buku.html/ccs.html">
 </head>
 <body>
     <h1>Formulir Perpanjangan Peminjaman Buku</h1>
