--- a/index.html
+++ b/index.html
@@ -195,3 +195,45 @@ style.ccs
 </body>
 </html>
 
+<div class="tab-pane fade" id="tab2default">
+    <div class="">
+        <h4 class="mtext-112 cl2 m-b-15"> Spesifikasi </h4> 
+        <table class="table">
+            <tr>
+                <td><span class="stext-101 cl2">Kode</span></td>
+                <td>:</td>
+                <td><a href="#" class="stext-103 cl6">61-42-004-0</a></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Pengarang</span></td>
+                <td>:</td>
+                <td><a href="https://eurekabookhouse.com/cari/result?author=Jo+Reynolds" class="stext-103 cl6">Jo Reynolds</a></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Penerbit</span></td>
+                <td>:</td>
+                <td><a href="https://eurekabookhouse.com/cari/result?manufacturer=Buku+Erlangga" class="stext-103 cl6">Buku Erlangga</a></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Harga</span></td>
+                <td>:</td>
+                <td><span class="stext-103 cl6">Rp 100.000</span></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Tanggal Rilis</span></td>
+                <td>:</td>
+                <td><span class="stext-103 cl6">1 Januari 2023</span></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Genre</span></td>
+                <td>:</td>
+                <td><span class="stext-103 cl6">Fiksi, Drama</span></td>
+            </tr>
+            <tr>
+                <td><span class="stext-101 cl2">Peringkat Umur</span></td>
+                <td>:</td>
+                <td><span class="stext-103 cl6">17+</span></td>
+            </tr>
+        </table>
+    </div>
+</div>
