--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ style.ccs
                 <ul>
                     <li><a href="#">Profil 1</a></li>
                     <li>
-                        <a href="#">Profil 2</a>
+                        <a href="tugas52.html">Profil 2</a>
                         <ul>
                         <li><a href="Fformulir Pemesanan Buku.html">Program Studi Perpustakaan </a></li>
                         <li><a href="Formulir Pemesanan Buku.html">Form Pemesanan Buku</a></li>
