--- a/tugas53.html
+++ b/tugas53.html
@@ -56,6 +56,7 @@
             border: 1px solid #ddd;
             border-radius: 5px;
         }
+
     </style>
 </head>
 <body>
@@ -64,36 +65,51 @@
         <h1>Pameran Buku</h1>
 
         <div class="gallery">
+            <!-- Book Item 1 -->
             <div class="book-item">
-                <img src="https://via.placeholder.com/200x300?text=Buku+1" alt="Buku 1" onclick="showDescription('deskripsiBuku1')">
+                <img src="https://online.fliphtml5.com/rmpye/liiq/files/shot.jpg" alt="Buku 1" onclick="showDescription('deskripsiBuku1')">
                 <div id="deskripsiBuku1" class="description">
                     <p><strong>Buku 1:</strong> Buku ini menceritakan petualangan seru di dunia fantasi. Ikuti kisahnya yang penuh misteri!</p>
                 </div>
             </div>
+            
+            <!-- Book Item 2 -->
             <div class="book-item">
-                <img src="https://via.placeholder.com/200x300?text=Buku+2" alt="Buku 2" onclick="showDescription('deskripsiBuku2')">
+                <img src="https://online.fliphtml5.com/rmpye/azxz/files/shot.jpg" alt="Buku 2" onclick="showDescription('deskripsiBuku2')">
                 <div id="deskripsiBuku2" class="description">
                     <p><strong>Buku 2:</strong> Buku ini membahas kehidupan sehari-hari dengan humor yang menghibur. Cocok untuk semua kalangan.</p>
                 </div>
             </div>
+
+            <!-- Book Item 3 -->
             <div class="book-item">
-                <img src="https://via.placeholder.com/200x300?text=Buku+3" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
                 <div id="deskripsiBuku3" class="description">
                     <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
                 </div>
             </div>
+
+            <!-- Add more books here in the same format -->
+            <!-- Example: -->
+            <!-- <div class="book-item">
+                <img src="URL_HERE" alt="Buku N" onclick="showDescription('deskripsiBukuN')">
+                <div id="deskripsiBukuN" class="description">
+                    <p><strong>Buku N:</strong> Deskripsi Buku N</p>
+                </div>
+            </div> -->
+
         </div>
     </div>
 
     <script>
         function showDescription(id) {
-            // Menyembunyikan semua deskripsi
+            // Hide all descriptions
             let descriptions = document.querySelectorAll('.description');
             descriptions.forEach(function(description) {
                 description.style.display = 'none';
             });
 
-            // Menampilkan deskripsi yang diklik
+            // Show the clicked description
             let descriptionToShow = document.getElementById(id);
             descriptionToShow.style.display = 'block';
         }
@@ -101,4 +117,3 @@
 
 </body>
 </html>
-
