--- a/tugas53.html
+++ b/tugas53.html
@@ -89,6 +89,69 @@
                 </div>
             </div>
 
+             <!-- Book Item 4 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 5 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 6 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 7 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 8 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 9 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+             <!-- Book Item 10 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
+             <!-- Book Item 12 -->
+            <div class="book-item">
+                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
+                <div id="deskripsiBuku3" class="description">
+                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                </div>
+            </div>
+
             <!-- Add more books here in the same format -->
             <!-- Example: -->
             <!-- <div class="book-item">
